Update the Refaster rule build instructions
Update the Refaster rule build instructions
to match the ones on the web site. Remove
no longer needed `J--add-exports` compiler
options.

See also:
 - 0ede1de
 - #1078

Fixes #1079

-------------
Created by MOE: https://github.com/google/moe
MOE_MIGRATED_REVID=207543845